Fix layout issues

--- a/src/components/tags/TagToken.css
+++ b/src/components/tags/TagToken.css
@@ -9,6 +9,8 @@
   user-select: none;
   outline: none;
   cursor: pointer;
+
+  border: 1px solid transparent;
 }
 
 .TagBar-tag:focus,
